# GrooveSequencer

./: .gitignore  CMakeLists.txt  README.md  increment_version.sh
Source/: Common.h  GrooveSequencerLookAndFeel.cpp  GrooveSequencerLookAndFeel.h  Pattern.h  PatternTransformer.cpp  PatternTransformer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Components/: GridCell.cpp  GridSequenceComponent.cpp  GridSequenceComponent.h  GridSequencerComponent.cpp  GridSequencerComponent.h  PatternBrowserComponent.cpp  PatternBrowserComponent.h  PatternControlsComponent.cpp  PatternControlsComponent.h  TransportComponent.cpp  TransportComponent.h
Source/Models/: PatternEntry.h
build_new/GrooveSequencer_artefacts/AU/Groove Sequencer.component/Contents/: Info.plist
build_new/GrooveSequencer_artefacts/VST3/Groove Sequencer.vst3/Contents/: Info.plist
